--- a/policies/dev-spaces/dev-spaces-placement-binding.yaml
+++ b/policies/dev-spaces/dev-spaces-placement-binding.yaml
@@ -1,13 +1,15 @@
 apiVersion: policy.open-cluster-management.io/v1
 kind: PlacementBinding
 metadata:
-  name: ossm3-binding
+  name: binding-policy-dev-spaces
   namespace: rhacm-policies
+  labels:
+    policy: dev-spaces
 placementRef:
-  name: openshift-clusters-ossm3
+  name: openshift-clusters
   kind: PlacementRule
   apiGroup: apps.open-cluster-management.io
 subjects:
-- name: ossm3-operator
+- name: dev-spaces
   kind: Policy
   apiGroup: policy.open-cluster-management.io
