--- a/policies/service-mesh/placement.yaml
+++ b/policies/service-mesh/placement.yaml
@@ -2,6 +2,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: openshift-clusters-ossm3
+  namespace: rhacm-policies
 spec:
   clusterConditions:
   - type: ManagedClusterConditionAvailable
