--- a/policies/secret-creation-date/secret-creation-date-policy.yaml
+++ b/policies/secret-creation-date/secret-creation-date-policy.yaml
@@ -15,33 +15,34 @@ spec:
         kind: ConfigurationPolicy
         metadata:
           name: secret-creation-date
-        spec:  
+        spec:
           evaluationInterval:
             compliant: 60s
             noncompliant: 60s
-          remediationAction: inform # Set to inform to alert without deleting/changing
+          remediationAction: inform # Set to inform to alert without deleting/changing. DO NOT SWITCH ON ENFORCEMENT.
           severity: low
           object-templates-raw: |
-            {{- /* Iterate through all namespaces */ -}}
             {{- range (lookup "v1" "Namespace" "" "").items }}
               {{- $nsName := .metadata.name -}}
-              {{- /* Check if the namespace name does NOT contain 'openshift' */ -}}
-              {{- if (contains "test" $nsName) }}
-              {{- /* Look up secrets in this specific namespace */ -}}
+              {{- $skipNamespace := false -}}
+              {{- range (list "installer" "devspaces" "default" "hive" "-system" "hypershift" "kube-" "-cluster" "multicluster" "open-cluster" "openshift" "rhacs" "stackrox" "trusted-") -}}
+                {{- if contains . $nsName }} {{ $skipNamespace = true }} {{ end -}}
+              {{- end -}}
+              {{- if not $skipNamespace }}
                 {{- range (lookup "v1" "Secret" $nsName "").items }}
                   {{- $secretName := .metadata.name -}}
-                  {{- /* Calculate age: 336 hours = 14 days */ -}}
-                  {{- if (gt (toInt (secondsSince .metadata.creationTimestamp)) 1209600) }}
+                  {{- $now := now -}}
+                  {{- $created := toDate "2006-01-02T15:04:05Z" .metadata.creationTimestamp -}}
+                  {{- if (gt (sub (toInt $now.Unix) (toInt $created.Unix)) 3600) }}
                   - complianceType: musthave
                     objectDefinition:
                       apiVersion: v1
                       kind: Secret
                       metadata:
-                        name: {{ $secretName }}
-                        namespace: {{ $nsName }}
-                        {{- /* The annotation below helps identify why it failed in the console */ -}}
+                        name: '{{ $secretName }}'
+                        namespace: '{{ $nsName }}'
                         annotations:
-                          policy.open-cluster-management.io/age-status: "Secret is older than 14 days"
+                          policy.open-cluster-management.io/reason: "Secret is too old and should be refreshed."
                   {{- end }}
                 {{- end }}
               {{- end }}
