--- a/policies/secret-creation-date/secret-creation-date-policy.yaml
+++ b/policies/secret-creation-date/secret-creation-date-policy.yaml
@@ -19,13 +19,13 @@ spec:
           evaluationInterval:
             compliant: 60s
             noncompliant: 60s
-          remediationAction: inform # Set to inform to alert without deleting/changing. DO NOT SWITCH ON ENFORCEMENT.
+          remediationAction: inform 
           severity: low
           object-templates-raw: |
             {{- range (lookup "v1" "Namespace" "" "").items }}
               {{- $nsName := .metadata.name -}}
               {{- $skipNamespace := false -}}
-              {{- range (list "installer" "devspaces" "default" "hive" "-system" "hypershift" "kube-" "-cluster" "multicluster" "open-cluster" "openshift" "rhacs" "stackrox" "trusted-") -}}
+              {{- range (list "installer" "devspaces" "default" "hive" "-system" "hypershift" "kube-" "-cluster" "multicluster" "open-cluster" "openshift" "rhacs" "stackrox" "trusted-" "rhacm-" ) -}}
                 {{- if contains . $nsName }} {{ $skipNamespace = true }} {{ end -}}
               {{- end -}}
               {{- if not $skipNamespace }}
@@ -33,16 +33,14 @@ spec:
                   {{- $secretName := .metadata.name -}}
                   {{- $now := now -}}
                   {{- $created := toDate "2006-01-02T15:04:05Z" .metadata.creationTimestamp -}}
-                  {{- if (gt (sub (toInt $now.Unix) (toInt $created.Unix)) 3600) }}
-                  - complianceType: musthave
+                  {{- if (gt (sub (toInt $now.Unix) (toInt $created.Unix)) 3600 ) }}
+                  - complianceType: mustnothave
                     objectDefinition:
                       apiVersion: v1
                       kind: Secret
                       metadata:
                         name: '{{ $secretName }}'
                         namespace: '{{ $nsName }}'
-                        annotations:
-                          policy.open-cluster-management.io/reason: "Secret is too old and should be refreshed."
                   {{- end }}
                 {{- end }}
               {{- end }}
